--- a/conditiond.ipynb
+++ b/conditiond.ipynb
@@ -10,6 +10,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -110,6 +115,27 @@
     "else:\n",
     "    print('sorry we do not hane', flavour,'flavour')\n",
     "          "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'marks' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m marks\u001b[39m.\u001b[39mindex\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'marks' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "marks.index"
    ]
   },
   {
